workloads/medium-place/mastodon/mastodon/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mastodon
  namespace: medium-place
  labels:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/part-of: mastodon
    app.kubernetes.io/version: 3.5.3

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/part-of: mastodon

  template:
    metadata:
      labels:
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/part-of: mastodon
        app.kubernetes.io/version: 3.5.3

    spec:
      terminationGracePeriodSeconds: 60

      volumes:
        - name: web-tmp
          emptyDir: {}

      containers:
        - name: web
          imagePullPolicy: Always
          image: ghcr.io/glitch-soc/mastodon:latest
          command:
            - bundle
            - exec
            - rails s -p 3000

          volumeMounts:
            - name: web-tmp
              mountPath: /opt/mastodon/tmp

          ports:
            - name: http
              protocol: TCP
              containerPort: 3000

        - name: streaming
          imagePullPolicy: Always
          image: ghcr.io/glitch-soc/mastodon:latest
          command:
            - node
            - ./streaming

          ports:
            - name: http-ws
              protocol: TCP
              containerPort: 4000

        - name: sidekiq
          imagePullPolicy: Always
          image: ghcr.io/glitch-soc/mastodon:latest
          command:
            - bundle
            - exec
            - sidekiq
