workloads/medium-place/mastodon/mastodon/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mastodon
  namespace: medium-place
  labels:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/part-of: mastodon
    app.kubernetes.io/version: 4.0.2

spec:
  selector:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/part-of: mastodon

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
    - name: http-ws
      protocol: TCP
      port: 4000
      targetPort: http-ws
