workloads/medium-place/mastodon/mastodon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mastodon
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    projectcontour.io/websocket-routes: /api/v1/streaming
  labels:
    app.kubernetes.io/part-of: mastodon

spec:
  ingressClassName: public

  tls:
    - hosts:
        - plaza.medium.place
      secretName: plaza.medium.place-tls

  rules:
    - host: plaza.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/streaming
            backend:
              service:
                name: mastodon
                port:
                  name: http-ws
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mastodon
                port:
                  name: http
